# ncnn-android-projects

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/luozw/detection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mobilev2-yolo5s-fp32.param  mobilev2-yolo5s-int8.param  mobilev2-yolo5s.param  retinaface.param
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: common.h  defaultParams.h  ncnn.h  retinaface.h  retinaface.id.h  thread_safety_stl.h  utils.h  yolov5.h
app/src/main/cpp/include/include/ncnn/: platform.h
app/src/main/cpp/include/ncnn/: platform.h
app/src/main/cpp/source/: ncnn.cpp  retinaface.cpp  utils.cpp  yolov5.cpp
app/src/main/java/com/luozw/detection/: Box.java  Detection.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/luozw/detection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
